@@ -180,7 +180,7 @@ exports.traceOutgoingRequest = function (agent, moduleName, method) {
       ins.bindEmitter(req)
 
       span.action = req.method
-      span.name = req.method + ' ' + getSafeHost(req) + parseUrl(req.path).pathname
+      span.name = req.method + ' ' + getSafeHost(req)
 
       // TODO: Research if it's possible to add this to the prototype instead.
       // Or if it's somehow preferable to listen for when a `response` listener
