@@ -225,7 +225,7 @@ module.exports = function (http2, agent, { enabled }) {
       var urlObj = parseUrl(headers[':path'])
       var path = urlObj.pathname
       var url = host + path
-      span.name = method + ' ' + url
+      span.name = method + ' ' + host
 
       var statusCode
       req.on('response', (headers) => {
